--- a/views/layout.html
+++ b/views/layout.html
@@ -24,11 +24,6 @@
     {% block head %}
 
     {% endblock %}
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body data-spy="scroll">
@@ -41,26 +36,6 @@
                     <span class="logo-title">SubWoofer</span>
                 </a>
             </h1><!--//logo-->
-            <nav id="main-nav" class="main-nav navbar-right" role="navigation">
-                <div class="navbar-header">
-                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button><!--//nav-toggle-->
-                </div><!--//navbar-header-->
-                <div class="navbar-collapse collapse" id="navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#about">About</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#docs">Docs</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#license">License</a></li>
-                        <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
-                    </ul><!--//nav-->
-                </div><!--//navabr-collapse-->
-            </nav><!--//main-nav-->
         </div>
     </header><!--//header-->
 
@@ -68,15 +43,19 @@
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
             <h2 class="title">Sub<span class="highlight">Woofer</span></h2>
-            <p class="intro">Metro Boomin Got some more lyrics</p>
+            <p class="intro">Metro Boomin got some more lyrics</p>
             <div class="btns">
-                <a class="btn btn-cta-secondary" href="http://themes.3rdwavemedia.com/" target="_blank">Demo</a>
-                <a class="btn btn-cta-primary" href="http://themes.3rdwavemedia.com/website-templates/devaid-free-bootstrap-theme-developers/" target="_blank">Download</a>
+                <form class="" action="index.html">
+                    <div class="form-group">
+                        <label for="youtube_url">Youtube Link</label>
+                        <input type="text" name="youtube_url" class="form-control" id="youtube_url" placeholder="">
+                    </div>
+
+                    <button type="submit" class="btn btn-cta-secondary" target="_blank">Do it</button>
+                </form>
             </div>
             <ul class="meta list-inline">
-                <li><a href="https://github.com/xriley/devAid-Theme" target="_blank">View on GitHub</a></li>
-                <li><a href="http://themes.3rdwavemedia.com/website-templates/devaid-free-bootstrap-theme-developers/" target="_blank">Full Documentation</a></li>
-                <li>Created by: <a href="http://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> at 3rd Wave Media</li>
+                <li>&nbsp;</li>
             </ul><!--//meta-->
         </div><!--//container-->
     </section><!--//promo-->
@@ -84,8 +63,10 @@
     <!-- ******ABOUT****** -->
     <section id="about" class="about section">
         <div class="container">
-            <h2 class="title text-center">What is devAid?</h2>
+            <h2 class="title text-center">Latest Dubs</h2>
+            <div class="grid">
 
+            </div>
         </div><!--//container-->
     </section><!--//about-->
 
