--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: devAid - Responsive Website Template for developers
  * Version: 1.1
  * Author: Xiaoying Riley
@@ -115,7 +115,6 @@ pre code {
 .header .logo {
   margin: 0;
   font-size: 26px;
-  padding-top: 10px;
 }
 .header .logo a {
   color: #fff;
@@ -184,10 +183,10 @@ pre code {
 .promo {
   background: #17baef;
   color: #fff;
-  padding-top: 150px;
+  padding-top: 100px;
 }
 .promo .title {
-  font-size: 98px;
+  font-size: 88px;
   color: #074f66;
   margin-top: 0;
 }
@@ -195,7 +194,7 @@ pre code {
   color: #eebf3f;
 }
 .promo .intro {
-  font-size: 28px;
+  font-size: 25px;
   max-width: 680px;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -206,7 +205,7 @@ pre code {
   padding: 8px 30px;
 }
 .promo .meta {
-  margin-top: 120px;
+  margin-top: 20px;
   margin-bottom: 30px;
   color: #0a7396;
 }
@@ -237,10 +236,15 @@ pre code {
   padding: 80px 0;
   background: #f5f5f5;
 }
-.about .title {
-  color: #074f66;
+.dub-vid .title {
+  color: #FFFFFF;
   margin-top: 0;
-  margin-bottom: 60px;
+  margin-bottom: 0;
+  font-size: 2em;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  line-height: 1.2em;
 }
 .about .intro {
   max-width: 800px;
@@ -268,6 +272,72 @@ pre code {
   color: #074f66;
   font-size: 18px;
 }
+
+.logo {
+    max-width: 240px;
+    widows: 100%;
+}
+
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.dub-vid {
+    position: relative;
+    overflow: hidden;
+    flex: 0 1 25%;
+}
+.dub-vid .img-wrap {position: relative; overflow: hidden;}
+.dub-vid .img-wrap:after {
+    content: '';
+    padding-top: 100%;
+    display: block;
+    background: rgba(0,0,0,0);
+    -webkit-transition: background .2s ease-in-out;
+    -o-transition: background .2s ease-in-out;
+    transition: background .2s ease-in-out;
+}
+.dub-vid:hover .img-wrap:after{
+    background: rgba(0,0,0,.6);
+}
+.dub-vid .img-wrap img {
+    width: auto;
+    height: auto;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+.dub-vid .info-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: white;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+.dub-vid:hover .info-wrap{
+    opacity: 1;
+    visibility: visible;
+    background: rgba(0,0,0,.5);
+}
+
 /* ======= Features Section ======= */
 .features {
   padding: 80px 0;
@@ -548,6 +618,16 @@ pre code {
   text-align: center;
   padding: 0;
 }
+
+.video_wrap {
+    padding: 30px 0;
+}
+
+.video_wrap  video{
+    max-width: 100%;
+}
+
+
 /* ======= Footer ======= */
 .footer {
   padding: 15px 0;
@@ -562,6 +642,16 @@ pre code {
 .footer .fa-heart {
   color: #fb866a;
 }
+
+.yt_form {
+    max-width: 720px;
+    margin: 0 auto;
+}
+.yt_form input{
+    text-align: center;
+}
+
+
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 767px) {
   .header .main-nav button {
@@ -574,7 +664,6 @@ pre code {
   .promo .btns .btn {
     margin-right: 0;
     clear: both;
-    display: block;
     margin-bottom: 30px;
   }
   .promo .title {
