--- a/views/layout.html
+++ b/views/layout.html
@@ -26,7 +26,7 @@
     {% endblock %}
 </head>
 
-<body data-spy="scroll">
+<body data-spy="scroll" id="app">
 
     <!-- ******HEADER****** -->
     <header id="header" class="header">
@@ -39,44 +39,17 @@
         </div>
     </header><!--//header-->
 
-    <!-- ******PROMO****** -->
-    <section id="promo" class="promo section offset-header">
-        <div class="container text-center">
-            <h2 class="title">Sub<span class="highlight">Woofer</span></h2>
-            <p class="intro">Metro Boomin got some more lyrics</p>
-            <div class="btns">
-                <form class="" action="index.html">
-                    <div class="form-group">
-                        <label for="youtube_url">Youtube Link</label>
-                        <input type="text" name="youtube_url" class="form-control" id="youtube_url" placeholder="">
-                    </div>
+    {% block content %}
 
-                    <button type="submit" class="btn btn-cta-secondary" target="_blank">Do it</button>
-                </form>
-            </div>
-            <ul class="meta list-inline">
-                <li>&nbsp;</li>
-            </ul><!--//meta-->
-        </div><!--//container-->
-    </section><!--//promo-->
-
-    <!-- ******ABOUT****** -->
-    <section id="about" class="about section">
-        <div class="container">
-            <h2 class="title text-center">Latest Dubs</h2>
-            <div class="grid">
-
-            </div>
-        </div><!--//container-->
-    </section><!--//about-->
+    {% endblock %}
 
 
     <!-- Javascript -->
-    <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/prism/prism.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script src="assets/plugins/jquery-1.11.3.min.js"></script>
+    <script src="assets/plugins/jquery.easing.1.3.js"></script>
+    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/vue/1.0.16/vue.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
