--- a/views/layout.html
+++ b/views/layout.html
@@ -50,6 +50,7 @@
     <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
     <script src="http://cdn.jsdelivr.net/vue/1.0.16/vue.min.js"></script>
+    <script src="http://www.storiesinflight.com/js_videosub/includes/videosub-0.9.9.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
