--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
     </form>
     <div class="video_wrap" v-if="video_src">
         <video id="video_player_el" controls="true" src="<+ video_src +>">
-            <track
+            <track id="subt"
             src="<+ srt_src +>"
             kind="subtitle" srclang="en-US" label="English" default/>
         </video>
