--- a/views/index.html
+++ b/views/index.html
@@ -55,11 +55,17 @@
     </form>
     <div class="video_wrap" v-if="video_src">
         <video v-el:video-element id="video_player_el" controls="true" src="<+ video_src +>">
-            <track v-el:subt id="subt"
-            src="<+ srt_src +>"
-            kind="subtitle" srclang="en-US" label="English" default/>
+            <html-track src="<+ srt_src +>"></html-track>
         </video>
     </div>
+</template>
+
+<template id="html-track">
+    <track v-el:subt id="subt"
+        src="<+ srt_src +>"
+        kind="subtitle"
+        srclang="en-US"
+        label="English" default/>
 </template>
 
 {% endblock %}
