--- a/views/layout.html
+++ b/views/layout.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="assets/plugins/prism/prism.css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet"
+    href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css"
+    />
 
     {% block head %}
 
@@ -28,6 +31,11 @@
 
 <body data-spy="scroll" id="app">
 
+    <div class="github-fork-ribbon-wrapper right">
+        <div class="github-fork-ribbon" style="background-color: #f80;">
+        <a href="https://github.com/SubwooferApp/Subwoofer">Fork me on GitHub</a>
+        </div>
+    </div>
     <!-- ******HEADER****** -->
     <header id="header" class="header">
         <div class="container">
